--- a/v2/index.html
+++ b/v2/index.html
@@ -54,7 +54,7 @@
 
   <div class="govuk-main-wrapper pfs-section-bg-alt govuk-!-padding-top-0 govuk-!-padding-bottom-0">
     <div class="govuk-width-container">
-      <div class="govuk-breadcrumbs govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-!-padding-top-3">
+      <div class="govuk-breadcrumbs govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-!-padding-top-3 govuk-!-padding-bottom-2">
         <ol class="govuk-breadcrumbs__list">
           <li class="govuk-breadcrumbs__list-item">
             <a class="govuk-breadcrumbs__link" href="/v2/index.html">Department for Levelling Up, Housing &
