--- a/v2/index.html
+++ b/v2/index.html
@@ -54,7 +54,8 @@
 
   <div class="govuk-main-wrapper pfs-section-bg-alt govuk-!-padding-top-0 govuk-!-padding-bottom-0">
     <div class="govuk-width-container">
-      <div class="govuk-breadcrumbs govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-!-padding-top-3 govuk-!-padding-bottom-2">
+      <div
+        class="govuk-breadcrumbs govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-!-padding-top-3 govuk-!-padding-bottom-2">
         <ol class="govuk-breadcrumbs__list">
           <li class="govuk-breadcrumbs__list-item">
             <a class="govuk-breadcrumbs__link" href="/v2/index.html">Department for Levelling Up, Housing &
@@ -73,7 +74,7 @@
   <main id="main-content" role="main">
     <section class="govuk-main-wrapper pfs-section-bg-alt">
       <div class="govuk-width-container">
-        <h1 class="govuk-heading-xl">Find funded project information</h1>
+        <h1 class="govuk-heading-xl">Find funded project data</h1>
         <p class="govuk-body-l govuk-!-margin-bottom-0">Use this tool to find monitoring and evaluation data and
           background information on funded projects.</p>
       </div>
@@ -85,13 +86,18 @@
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-one-third-from-desktop">
                 <h2 class="govuk-heading-l govuk-!-font-weight-bold"><a href="/v2/download-data.html"
-                    class="govuk-link govuk-!-font-weight-bold">Search for monitoring and evaluation data</a></h2>
-                <p class="govuk-body">Search and download project data submitted by funded organisations.</p>
+                    class="govuk-link govuk-!-font-weight-bold">Download monitoring and evaluation data</a></h2>
+                <p class="govuk-body">Filter and download project data submitted by funded organisations</p>
               </div>
               <div class="govuk-grid-column-one-third-from-desktop">
                 <h2 class="govuk-heading-l govuk-!-font-weight-bold"><a href="/styles/"
-                    class="govuk-link govuk-!-font-weight-bold">Search funding directory</a></h2>
-                <p class="govuk-body">Find background information on funded projects and organisations.</p>
+                    class="govuk-link govuk-!-font-weight-bold">Find a funded organisation</a></h2>
+                <p class="govuk-body">Find background information on funded organisations</p>
+              </div>
+              <div class="govuk-grid-column-one-third-from-desktop">
+                <h2 class="govuk-heading-l govuk-!-font-weight-bold"><a href="/styles/"
+                    class="govuk-link govuk-!-font-weight-bold">Find a project</a></h2>
+                <p class="govuk-body">Find background information on funded projects</p>
               </div>
             </div>
           </div>
