--- a/v2/download-data-results.html
+++ b/v2/download-data-results.html
@@ -18,30 +18,30 @@
 
   <!--[if !IE 8]><!-->
   <link href="/stylesheets/govuk-frontend-4.4.0.min.css" rel="stylesheet">
-  <link href="/stylesheets/semantic.min.css" rel="stylesheet">
+  <link href="/stylesheets/dropdown.min.css" rel="stylesheet">
+  <link href="/stylesheets/transition.min.css" rel="stylesheet">
   <link href="/stylesheets/pfs-custom-styles.css" rel="stylesheet">
   <!--<![endif]-->
 
   <!--[if IE 8]>
     <link href="/stylesheets/govuk-frontend-ie8-4.4.0.min.css" rel="stylesheet">
   <![endif]-->
-
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <script src="/javascript/semantic.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      console.log("ready!");
-      $('#multi-select').dropdown();
-    });
-  </script>
 </head>
 
 <body class="govuk-template__body">
   <script>
     document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
   </script>
-
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  <script src="/javascript/dropdown.min.js"></script>
+  <script src="/javascript/transition.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      console.log("ready!");
+      $('.pfs-multi-select').dropdown();
+    });
+  </script>
 
   <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 
@@ -89,64 +89,47 @@
   <main id="main-content" role="main">
     <section class="govuk-main-wrapper">
       <div class="govuk-width-container">
-        <h1 class="govuk-heading-xl">Search for monitoring and evaluation data</h1>
-        <p class="govuk-body-l">Use the filters on this page to find project data submitted by funded organisations. You
-          can also download this information.</p>
-
+        <h1 class="govuk-heading-xl">Download monitoring and evaluation data</h1>
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-            <form action="#results" method="post" novalidate>
+            <form action="/v2/download-data-results.html#results" method="post" novalidate>
               <div class="govuk-form-group">
-                <label class="govuk-label" for="submitted-by">
-                  Fund(s)
+                <label class="govuk-label" for="funds">
+                  Filter by fund
                 </label>
-                <select class="govuk-select" id="submitted-by" name="submitted-by">
-                  <option value="all">All</option>
-                  <option value="wldc" selected>West Lindsey District Council</option>
+                <select name="funds" class="ui selection dropdown govuk-select pfs-multi-select" multiple="" id="funds">
+                  <option value="">Select fund(s)</option>
+                  <option value="LU">Levelling Up Fund</option>
+                  <option value="TF">Towns Fund</option>
                 </select>
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="area">
-                  Area(s)
+                  Filter by area
                 </label>
-                <select class="govuk-select" id="area" name="area">
-                  <option value="all">All</option>
-                  <option value="east-midlands" selected>East Midlands</option>
+                <select name="areas" class="ui selection dropdown govuk-select pfs-multi-select" multiple="" id="areas">
+                  <option value="">Select area(s)</option>
+                  <option value="NE">North East</option>
+                  <option value="NW">North West</option>
+                  <option value="SE">South East</option>
+                  <option value="SW">South West</option>
                 </select>
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="fund">
-                  Fund recipient(s)
+                  Filter by funded organisation
                 </label>
-                <select name="states" class="ui selection dropdown govuk-select pfs-multi-select" multiple="" id="multi-select">
-                  <option value="">States</option>
-                  <option value="AL">Alabama</option>
-                  <option value="AK">Alaska</option>
-                  <option value="AZ">Arizona</option>
-                  <option value="AR">Arkansas</option>
-                  <option value="CA">California</option>
-                  <option value="OH">Ohio</option>
-                  <option value="OK">Oklahoma</option>
-                  <option value="OR">Oregon</option>
-                  <option value="PA">Pennsylvania</option>
-                  <option value="RI">Rhode Island</option>
-                  <option value="SC">South Carolina</option>
-                  <option value="SD">South Dakota</option>
-                  <option value="TN">Tennessee</option>
-                  <option value="TX">Texas</option>
-                  <option value="UT">Utah</option>
-                  <option value="VT">Vermont</option>
-                  <option value="VA">Virginia</option>
-                  <option value="WA">Washington</option>
-                  <option value="WV">West Virginia</option>
-                  <option value="WI">Wisconsin</option>
-                  <option value="WY">Wyoming</option>
+                <select name="recipient" class="ui selection dropdown govuk-select pfs-multi-select" multiple=""
+                  id="recipient">
+                  <option value="">Select organisation(s)</option>
+                  <option value="BH">Brighton and Hove</option>
+                  <option value="BU">Buckinghamshire</option>
                 </select>
               </div>
               <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
                   <legend class="govuk-fieldset__legend">
-                    Data type
+                    Filter by data type
                   </legend>
                   <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
                     <div class="govuk-checkboxes__item">
@@ -186,11 +169,16 @@
                     <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                       id="conditional-outcome">
                       <div class="govuk-form-group">
-                        <label class="govuk-label" for="contact-by-text">
+                        <label class="govuk-label" for="outcomes">
                           Select outcome(s)
                         </label>
-                        <input class="govuk-input govuk-!-width-one-third" id="contact-by-text" name="contact-by-text"
-                          type="tel" autocomplete="tel">
+                        <select name="outcomes" class="ui selection dropdown govuk-select pfs-multi-select" multiple=""
+                          id="outcomes">
+                          <option value="">Outcome(s)</option>
+                          <option value="GS">Green spaces</option>
+                          <option value="AQ">Air quality</option>
+                          <option value="TP">Trees planted</option>
+                        </select>
                       </div>
                     </div>
                   </div>
@@ -199,7 +187,7 @@
               <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" role="group" aria-describedby="timeframe-hint">
                   <legend class="govuk-fieldset__legend">
-                    Timeframe
+                    Select a timeframe
                   </legend>
                   <div class="govuk-date-input" id="timeframe">
                     <div class="govuk-date-input__item">
@@ -270,7 +258,14 @@
                   <option value="csv" selected>CSV</option>
                 </select>
               </div>
-              <button class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button">Download</button>
+              <div class="govuk-button-group govuk-!-margin-bottom-0">
+                <button type="submit" class="govuk-button" data-module="govuk-button">
+                  Download
+                </button>
+                <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                  Preview
+                </button>
+              </div>
             </form>
           </div>
         </div>
@@ -279,10 +274,10 @@
     <section class="govuk-main-wrapper pfs-section-bg-alt">
       <div class="govuk-width-container">
         <div class="govuk-grid-row">
-          <div id="details" class="govuk-grid-column-full">
-            <h2 class="govuk-heading-l">Dataset details</h2>
+          <div id="results" class="govuk-grid-column-full">
+            <h2 class="govuk-heading-l">Results</h2>
           </div>
-          <div class="govuk-grid-column-full">
+          <div class="govuk-grid-column-two-thirds">
             <div class="govuk-form-group">
               <label class="govuk-label govuk-date-input__label" for="timeframe-year">
                 Fund(s):
@@ -304,6 +299,54 @@
               <strong class="govuk-tag govuk-tag--blue">GREEN SPACES</strong>
               <strong class="govuk-tag govuk-tag--blue">TREES PLANTED</strong>
             </div>
+          </div>
+          <div class="govuk-grid-column-two-thirds">
+            <dl class="govuk-summary-list govuk-summary-list--no-border">
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Timeframe:
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  2 August 2020 to 8 August 2021
+                </dd>
+              </div>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Data format:
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  CSV
+                </dd>
+              </div>
+            </dl>
+          </div>
+          <div class="govuk-grid-column-full">
+            <p class="govuk-heading-s">Projects</p>
+            <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
+              <li>
+                <a class="govuk-link govuk-!-margin-bottom-0" href="#">TF 26534 - High Street redevelopment - Canterbury
+                  City Council (Towns Fund)</a>
+                <p class="govuk-!-margin-top-1"><strong>Data collection limitations: </strong>The air quality sensor ran
+                  out of power from March
+                  2021, so stopped recording for two months.</p>
+              </li>
+              <li>
+                <a class="govuk-link govuk-!-margin-bottom-0" href="#">TF 56652 - West Lindsey town deal - West Lindsey
+                  Council (Towns Fund)</a>
+                <p class="govuk-!-margin-top-1"><strong>Data collection limitations: </strong>We changed contractors
+                  part way through data collection so there is a period where no data was collected.</p>
+              </li>
+              <li>
+                <a class="govuk-link govuk-!-margin-bottom-0" href="#">LUF 38923 - Bakely Centre - Bakely Council
+                  (Levelling Up Fund)
+                </a>
+              </li>
+              <li>
+                <a class="govuk-link govuk-!-margin-bottom-0" href="#">LUF 89232 - Regenerate green spaces - Canterbury
+                  City Council (Levelling Up Fund)
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
