updated folder sturcture for version one

--- a/v1/journey-one/index.html
+++ b/v1/journey-one/index.html
@@ -160,7 +160,7 @@
           <ul class="govuk-list govuk-!-margin-bottom-0">
             <li class="pfs-search-results-list__item">
               <h3 class="govuk-heading-m govuk-!-margin-bottom-1"><a class="govuk-link"
-                  href="/v1/search/project-one.html">Fenn's shopping centre
+                  href="/v1/journey-one/search/project.html">Fenn's shopping centre
                   footfall project
                   outcomes 2021</a></h3>
               <p class="govuk-body-s">Last updated: 8 August 2022 | Levelling Up Fund | 3 MB</p>
