--- a/v1/journey-two/search/project.html
+++ b/v1/journey-two/search/project.html
@@ -56,43 +56,28 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/landing-one.html">Find project data</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/journey-two/index.html">Find project data</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/landing-one.html">Search results</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/journey-two/index.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/search/project-one.html">Fenn's shopping centre footfall project
-            outcomes
+          <a class="govuk-breadcrumbs__link" href="#">Greater London footfall project outcomes
             2021</a>
         </li>
       </ol>
     </div>
     <main class="govuk-main-wrapper" id="main-content" role="main">
-      <h1 class="govuk-heading-xl">Fenn's shopping centre footfall project outcomes 2021</h1>
+      <h1 class="govuk-heading-xl">Greater London footfall project outcomes 2021</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <p class="govuk-body"><strong>Project summary: </strong>Fenn's shopping centre in Lincoln city centre has
-            experienced a decline in footfall in recent years. In 2021, local businesses worked together to increase
-            footfall in the shopping centre and surrounding area to support local retailers.</p>
-          <p class="govuk-body"><a class="govuk-link" href="/v1/search/project-summary-one.html">Read full project
-              summary</a>
-          </p>
           <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Last updated:
+                Fund(s):
               </dt>
               <dd class="govuk-summary-list__value">
-                8 August 2021
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Fund:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Levelling Up
+                Levelling Up, Towns Fund
               </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -105,66 +90,29 @@
             </div>
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Funding amount:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                £30,000,000
-              </dd>
-            </div>
-          </dl>
-          <dl class="govuk-summary-list govuk-summary-list--no-border">
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                How data was collected:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                External organisations hired sensors to track mobile steps in shopping centre
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Limitations to data collection:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Sensors broke for two months
-              </dd>
-            </div>
-          </dl>
-          <dl class="govuk-summary-list govuk-summary-list--no-border">
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
                 Frequency of reporting:
               </dt>
               <dd class="govuk-summary-list__value">
                 Annual
               </dd>
             </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Data submitted by:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                West Lindsey District Council
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Project contact:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                <a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>
-              </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Location:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                Gainsborough, Lincolnshire
-              </dd>
-            </div>
           </dl>
-          <form>
+          <h3 class="govuk-heading-m">Sources</h3>
+          <ul class="govuk-list--bullet">
+            <li>
+              <a class="govuk-link" href="#">Rainham footfall 2021</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="/v1/journey-two/search/project-summary.html">Fenn's shopping centre footfall 2021</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="#">Bakely footfall 2021</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="#">Bonny centre footfall 2021</a>
+            </li>
+          </ul>
+          <form class="govuk-!-margin-top-6">
             <div class="govuk-form-group">
               <label class="govuk-label" for="file-format">
                 File format
@@ -182,6 +130,8 @@
               </button>
             </div>
           </form>
+          <h3 class="govuk-heading-m govuk-!-margin-top-6">Preview</h3>
+          <img class="govuk-!-width-two-thirds pfs-img-border" src="/assets/images/graph-placeholder.png" alt="">
         </div>
         <div class="govuk-grid-column-full">
           <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
@@ -192,16 +142,10 @@
         <div class="govuk-grid-column-full">
           <ul class="govuk-list">
             <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 2000</a>
+              <a class="govuk-link" href="#">West Sussex project footfall outcomes 2021</a>
             </li>
             <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1999</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1998</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1997</a>
+              <a class="govuk-link" href="#">Hertfordshire project footfall outcomes 2021</a>
             </li>
           </ul>
         </div>
