--- a/v1/index.html
+++ b/v1/index.html
@@ -57,9 +57,9 @@
       <h1 class="govuk-heading-xl">Alpha - M&E Design Exploration V1</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds-from-desktop">
-          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1/landing-one.html">Journey
+          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1/journey-one/index.html">Journey
               1</a></h2>
-          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1/landing-two.html">Journey
+          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="/v1/journey-two/index.html">Journey
               2</a></h2>
         </div>
       </div>
