--- a/v1/journey-one/search/project-summary.html
+++ b/v1/journey-one/search/project-summary.html
@@ -56,15 +56,15 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/index.html">Search results</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/journey-one/index.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/search/project-one.html">Fenn's shopping centre footfall project
+          <a class="govuk-breadcrumbs__link" href="/v1/journey-one/search/project.html">Fenn's shopping centre footfall project
             outcomes
             2021</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/search/project-one.html">Project summary</a>
+          <a class="govuk-breadcrumbs__link" href="#">Project summary</a>
         </li>
       </ol>
     </div>
