--- a/v1/journey-one/search/project.html
+++ b/v1/journey-one/search/project.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>GOV.UK - Funding Service - Fenn's shopping centre footfall project outcomes 2021 - Project summary</title>
+  <title>GOV.UK - Funding Service - Fenn's shopping centre footfall project outcomes 2021</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="theme-color" content="#0b0c0c">
 
@@ -56,22 +56,28 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/index.html">Search results</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/journey-one/index.html">Find project data</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/search/project-two.html">Fenn's shopping centre footfall project
+          <a class="govuk-breadcrumbs__link" href="/v1/journey-one/index.html">Search results</a>
+        </li>
+        <li class="govuk-breadcrumbs__list-item">
+          <a class="govuk-breadcrumbs__link" href="#">Fenn's shopping centre footfall project
             outcomes
             2021</a>
-        </li>
-        <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/search/project-two.html">Project summary</a>
         </li>
       </ol>
     </div>
     <main class="govuk-main-wrapper" id="main-content" role="main">
-      <h1 class="govuk-heading-xl">Project summary: Fenn's shopping centre footfall</h1>
+      <h1 class="govuk-heading-xl">Fenn's shopping centre footfall project outcomes 2021</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
+          <p class="govuk-body"><strong>Project summary: </strong>Fenn's shopping centre in Lincoln city centre has
+            experienced a decline in footfall in recent years. In 2021, local businesses worked together to increase
+            footfall in the shopping centre and surrounding area to support local retailers.</p>
+          <p class="govuk-body"><a class="govuk-link" href="/v1/journey-one/search/project-summary.html">Read full project
+              summary</a>
+          </p>
           <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
@@ -106,16 +112,47 @@
               </dd>
             </div>
           </dl>
-          <p class="govuk-body"><strong>Project aim: </strong>The project will use funding to regenerate the shopping
-            centre, support local retailers and improve community feel.</p>
           <dl class="govuk-summary-list govuk-summary-list--no-border">
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                How data was collected:
+              </dt>
+              <dd class="govuk-summary-list__value">
+                External organisations hired sensors to track mobile steps in shopping centre
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Limitations to data collection:
+              </dt>
+              <dd class="govuk-summary-list__value">
+                Sensors broke for two months
+              </dd>
+            </div>
+          </dl>
+          <dl class="govuk-summary-list govuk-summary-list--no-border">
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Frequency of reporting:
+              </dt>
+              <dd class="govuk-summary-list__value">
+                Annual
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Data submitted by:
+              </dt>
+              <dd class="govuk-summary-list__value">
+                West Lindsey District Council
+              </dd>
+            </div>
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Project contact:
               </dt>
               <dd class="govuk-summary-list__value">
-                <a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>, <a class="govuk-link"
-                  href="#">sally.law@lincolnshire.gov.uk</a>
+                <a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>
               </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -126,25 +163,7 @@
                 Gainsborough, Lincolnshire
               </dd>
             </div>
-            <div class="govuk-summary-list__row">
-              <dt class="govuk-summary-list__key">
-                Project status:
-              </dt>
-              <dd class="govuk-summary-list__value">
-                <strong class="govuk-tag govuk-tag--yellow">
-                  Delayed
-                </strong>
-              </dd>
-            </div>
           </dl>
-          <ul class="govuk-list">
-            <li>
-              <a class="govuk-link" href="#">View risk register</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">View PowerBI dashboard</a>
-            </li>
-          </ul>
           <form>
             <div class="govuk-form-group">
               <label class="govuk-label" for="file-format">
@@ -168,12 +187,21 @@
           <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
         </div>
         <div class="govuk-grid-column-full">
-          <h2 class="govuk-heading-m">Related project information</h2>
+          <h2 class="govuk-heading-m">Related project data</h2>
         </div>
         <div class="govuk-grid-column-full">
           <ul class="govuk-list">
             <li>
-              <a class="govuk-link" href="#">Fenn's shopping Centre project outcomes 2021</a>
+              <a class="govuk-link" href="#">Fenn's shopping centre footfall 2000</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1999</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1998</a>
+            </li>
+            <li>
+              <a class="govuk-link" href="#">Fenn's shopping centre footfall 1997</a>
             </li>
           </ul>
         </div>
