--- a/v1/journey-two/index.html
+++ b/v1/journey-two/index.html
@@ -160,10 +160,10 @@
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-quarter">
               <div class="pfs-card-block">
-                <img class="govuk-!-width-full" src="/assets/images/govuk-opengraph-image.png" alt="">
+                <img class="govuk-!-width-full" src="/assets/images/preview-placeholder.png" alt="">
                 <div class="pfs-card-block__content">
                   <p class="govuk-body-s"><a class="govuk-link govuk-!-font-weight-bold"
-                      href="/v1/search/project-two.html">Fenn's
+                      href="/v1/journey-two/search/project.html">Fenn's
                       shopping centre
                       footfall project
                       outcomes 2021</a></p>
@@ -196,7 +196,7 @@
             </div>
             <div class="govuk-grid-column-one-quarter">
               <div class="pfs-card-block">
-                <img class="govuk-!-width-full" src="/assets/images/govuk-opengraph-image.png" alt="">
+                <img class="govuk-!-width-full" src="/assets/images/preview-placeholder.png" alt="">
                 <div class="pfs-card-block__content">
                   <p class="govuk-body-s"><a class="govuk-link govuk-!-font-weight-bold" href="#">Hedge Hill project
                       outcomes 2021</a></p>
