--- a/v1/journey-two/search/project-summary.html
+++ b/v1/journey-two/search/project-summary.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>GOV.UK - Funding Service - Fenn's shopping centre footfall project outcomes 2021</title>
+  <title>GOV.UK - Funding Service - Fenn's shopping centre footfall project outcomes 2021 - Project summary</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="theme-color" content="#0b0c0c">
 
@@ -56,28 +56,37 @@
     <div class="govuk-breadcrumbs">
       <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/landing-two.html">Find project data</a>
+          <a class="govuk-breadcrumbs__link" href="/v1/journey-two/index.html">Search results</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/landing-two.html">Search results</a>
-        </li>
-        <li class="govuk-breadcrumbs__list-item">
-          <a class="govuk-breadcrumbs__link" href="/v1/search/project-two.html">Greater London footfall project outcomes
+          <a class="govuk-breadcrumbs__link" href="/v1/journey-two/search/project.html">Fenn's shopping centre footfall project
+            outcomes
             2021</a>
+        </li>
+        <li class="govuk-breadcrumbs__list-item">
+          <a class="govuk-breadcrumbs__link" href="#">Project summary</a>
         </li>
       </ol>
     </div>
     <main class="govuk-main-wrapper" id="main-content" role="main">
-      <h1 class="govuk-heading-xl">Greater London footfall project outcomes 2021</h1>
+      <h1 class="govuk-heading-xl">Project summary: Fenn's shopping centre footfall</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Fund(s):
+                Last updated:
               </dt>
               <dd class="govuk-summary-list__value">
-                Levelling Up, Towns Fund
+                8 August 2021
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Fund:
+              </dt>
+              <dd class="govuk-summary-list__value">
+                Levelling Up
               </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -90,29 +99,53 @@
             </div>
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Frequency of reporting:
+                Funding amount:
               </dt>
               <dd class="govuk-summary-list__value">
-                Annual
+                £30,000,000
               </dd>
             </div>
           </dl>
-          <h3 class="govuk-heading-m">Sources</h3>
-          <ul class="govuk-list--bullet">
+          <p class="govuk-body"><strong>Project aim: </strong>The project will use funding to regenerate the shopping
+            centre, support local retailers and improve community feel.</p>
+          <dl class="govuk-summary-list govuk-summary-list--no-border">
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Project contact:
+              </dt>
+              <dd class="govuk-summary-list__value">
+                <a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>, <a class="govuk-link"
+                  href="#">sally.law@lincolnshire.gov.uk</a>
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Location:
+              </dt>
+              <dd class="govuk-summary-list__value">
+                Gainsborough, Lincolnshire
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Project status:
+              </dt>
+              <dd class="govuk-summary-list__value">
+                <strong class="govuk-tag govuk-tag--yellow">
+                  Delayed
+                </strong>
+              </dd>
+            </div>
+          </dl>
+          <ul class="govuk-list">
             <li>
-              <a class="govuk-link" href="#">Rainham footfall 2021</a>
+              <a class="govuk-link" href="#">View risk register</a>
             </li>
             <li>
-              <a class="govuk-link" href="/v1/search/project-summary-two.html">Fenn's shopping centre footfall 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Bakely footfall 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Bonny centre footfall 2021</a>
+              <a class="govuk-link" href="#">View PowerBI dashboard</a>
             </li>
           </ul>
-          <form class="govuk-!-margin-top-6">
+          <form>
             <div class="govuk-form-group">
               <label class="govuk-label" for="file-format">
                 File format
@@ -130,22 +163,17 @@
               </button>
             </div>
           </form>
-          <h3 class="govuk-heading-m govuk-!-margin-top-6">Preview</h3>
-          <img class="govuk-!-width-two-thirds pfs-img-border" src="/assets/images/graph-placeholder.png" alt="">
         </div>
         <div class="govuk-grid-column-full">
           <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
         </div>
         <div class="govuk-grid-column-full">
-          <h2 class="govuk-heading-m">Related project data</h2>
+          <h2 class="govuk-heading-m">Related project information</h2>
         </div>
         <div class="govuk-grid-column-full">
           <ul class="govuk-list">
             <li>
-              <a class="govuk-link" href="#">West Sussex project footfall outcomes 2021</a>
-            </li>
-            <li>
-              <a class="govuk-link" href="#">Hertfordshire project footfall outcomes 2021</a>
+              <a class="govuk-link" href="#">Fenn's shopping Centre project outcomes 2021</a>
             </li>
           </ul>
         </div>
